--- a/BookLibrary.Client/MainWindow.xaml
+++ b/BookLibrary.Client/MainWindow.xaml
@@ -11,7 +11,7 @@
             <RowDefinition Height="3*"/>
             <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
-        <DataGrid ItemsSource="{Binding}" Margin="0,0,-0.4,0" Grid.RowSpan="2"></DataGrid>
+        <DataGrid x:Name="dg" ItemsSource="{Binding}" Margin="0,0,-0.4,0" Grid.RowSpan="2"></DataGrid>
         <StackPanel Grid.Row="1">
             <Label>Name</Label>
             <TextBox x:Name="tbName"></TextBox>
